# ChangeLog for www-client/urlgfe
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/urlgfe/Attic/ChangeLog,v 1.10 2006/08/02 22:32:34 swegener Exp $

  02 Aug 2006; Sven Wegener <swegener@gentoo.org>
  +files/1.0-as-needed.patch, urlgfe-1.0.ebuild:
  Add better configure handling, with --as-needed fix.

*urlgfe-1.0 (10 Jul 2006)

  10 Jul 2006; Sven Wegener <swegener@gentoo.org> -urlgfe-1.0_rc2.ebuild,
  +urlgfe-1.0.ebuild:
  Version bump.

*urlgfe-1.0_rc2 (23 May 2006)

  23 May 2006; Sven Wegener <swegener@gentoo.org> -urlgfe-1.0_rc1.ebuild,
  +urlgfe-1.0_rc2.ebuild:
  Version bump.

*urlgfe-1.0_rc1 (02 Mar 2006)

  02 Mar 2006; Sven Wegener <swegener@gentoo.org> +urlgfe-1.0_rc1.ebuild:
  Version bump.

  04 Feb 2006; Joshua Nichols <nichoj@gentoo.org> urlgfe-0.98b.ebuild:
  Added ~amd64 keyword.

*urlgfe-0.98b (09 Sep 2005)

  09 Sep 2005; Sven Wegener <swegener@gentoo.org> +urlgfe-0.98b.ebuild:
  Version bump.

  29 Aug 2005; Sven Wegener <swegener@gentoo.org> urlgfe-0.98a.ebuild:
  Stable on x86.

  16 Jul 2005; David Holm <dholm@gentoo.org> urlgfe-0.98a.ebuild:
  Added to ~ppc.

*urlgfe-0.98a (15 Jul 2005)

  15 Jul 2005; Sven Wegener <swegener@gentoo.org> -urlgfe-0.98.ebuild,
  +urlgfe-0.98a.ebuild:
  Version bump.

*urlgfe-0.98 (19 May 2005)

  19 May 2005; Sven Wegener <swegener@gentoo.org> +metadata.xml,
  +urlgfe-0.98.ebuild:
  Initial commit, ebuild written by me. Closes bug #38715.
