@@ -16,14 +16,14 @@ EBUILD urlgfe-0.98b.ebuild 794 RMD160 5ce95383875fc0bbd8ac8da91baa317e56c91086 S
 MD5 51d82bed0c2712adc1cc10a2ca00577b urlgfe-0.98b.ebuild 794
 RMD160 5ce95383875fc0bbd8ac8da91baa317e56c91086 urlgfe-0.98b.ebuild 794
 SHA256 d0dfd4ff407e47c976883e68500526957a3d8c34173a652edcd672cf490d56d8 urlgfe-0.98b.ebuild 794
-EBUILD urlgfe-1.0.ebuild 939 RMD160 9c6293836921a780e0862494b43bfd43e58e53ef SHA1 cb0dcbaea57aeab450f4490729d5e554cb4a83ae SHA256 1851ebd424e9135785004b62dd48fb6e6b6a4371d3143239dec619ada43e4e72
-MD5 5f0fc7430c0fa6971fcf172f249cd003 urlgfe-1.0.ebuild 939
-RMD160 9c6293836921a780e0862494b43bfd43e58e53ef urlgfe-1.0.ebuild 939
-SHA256 1851ebd424e9135785004b62dd48fb6e6b6a4371d3143239dec619ada43e4e72 urlgfe-1.0.ebuild 939
-MISC ChangeLog 1479 RMD160 700c8d7e7df32bd3ea62392a23dfe27af5bc899f SHA1 70cc68b828463ca524efd8b427db8067a18da1cf SHA256 222cda28fc78b678808ac99c5a9bda81e6e12151a511f07c6081584d34f55318
-MD5 51a879293f6c5d55f89f67870cbeffc0 ChangeLog 1479
-RMD160 700c8d7e7df32bd3ea62392a23dfe27af5bc899f ChangeLog 1479
-SHA256 222cda28fc78b678808ac99c5a9bda81e6e12151a511f07c6081584d34f55318 ChangeLog 1479
+EBUILD urlgfe-1.0.ebuild 967 RMD160 5c17135567553c406a73577d03c076e40c7c25fd SHA1 0e6384c586c1ea56a77e7d5384f5a2742c6103d4 SHA256 bbe81b432eb16fa5a1773b26d8257186046766947200e7a14cc4b1006b5ac52f
+MD5 45c62ff46b24baf91cb71bf1241fb1e7 urlgfe-1.0.ebuild 967
+RMD160 5c17135567553c406a73577d03c076e40c7c25fd urlgfe-1.0.ebuild 967
+SHA256 bbe81b432eb16fa5a1773b26d8257186046766947200e7a14cc4b1006b5ac52f urlgfe-1.0.ebuild 967
+MISC ChangeLog 1582 RMD160 5ee36d173c5960c1c15071fefa15f494799507b6 SHA1 16320d176a4862fda4140776b8e0ac27009496a9 SHA256 d835c9cb88847428660c8a04f7eb238bd2932047876c30a349bb9f914716c3d8
+MD5 806cfeb4c09946a660b998361b815b7e ChangeLog 1582
+RMD160 5ee36d173c5960c1c15071fefa15f494799507b6 ChangeLog 1582
+SHA256 d835c9cb88847428660c8a04f7eb238bd2932047876c30a349bb9f914716c3d8 ChangeLog 1582
 MISC metadata.xml 533 RMD160 24c3956677a97103be91baca3ad43ec7e6a6a724 SHA1 3f03a271aad116e2cf367fd0ae1723b0259a8d3d SHA256 bbb5cbb41ecd378f20f0f6e6dda664b379a2df9485038039f3f99cdfa5396863
 MD5 02c76c4d6ee14a5634bba6f72032d3ce metadata.xml 533
 RMD160 24c3956677a97103be91baca3ad43ec7e6a6a724 metadata.xml 533
@@ -38,9 +38,9 @@ MD5 a6388e68c1af536d2f580cb75fd75c18 files/digest-urlgfe-1.0 232
 RMD160 2d4a6ab12139094ff4d4828edf3c061abc078222 files/digest-urlgfe-1.0 232
 SHA256 77f066c09dd78a3a481376fecb48db9d3ccd84c358c5366d9fd56f87909fc982 files/digest-urlgfe-1.0 232
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.3 (GNU/Linux)
+Version: GnuPG v1.4.5 (GNU/Linux)
 
-iD8DBQFE0SgMI1lqEGTUzyQRAg/rAKCyP2Y1qWL00CEUQ5t4Z4CsB8JzhQCgpE/F
-F4oSL7xlvD+2YQh3rkut7No=
-=wj+9
+iD8DBQFFBEjjI1lqEGTUzyQRAibwAJ4tGiIO1nNR9iheg4wZQ7ICD7EXMACg0Aov
+MD6/QVWH2CDBOq9WaYvgOjg=
+=YpUY
 -----END PGP SIGNATURE-----
