@@ -1,6 +1,9 @@
 # ChangeLog for www-client/urlgfe
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/urlgfe/Attic/ChangeLog,v 1.10 2006/08/02 22:32:34 swegener Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/www-client/cvs-repo/gentoo-x86/www-client/urlgfe/Attic/ChangeLog,v 1.11 2006/09/10 17:18:18 swegener Exp $
+
+  10 Sep 2006; Sven Wegener <swegener@gentoo.org> ChangeLog:
+  Add autopoint call to fix bug #146151.
 
   02 Aug 2006; Sven Wegener <swegener@gentoo.org>
   +files/1.0-as-needed.patch, urlgfe-1.0.ebuild:
